# chat.yakimanjusuki

./: README.md  compose-dev.yaml  compose-prod.yaml  dev-Makefile
backend/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  simple_agent.py
containers/backend/dev/: Dockerfile
containers/frontend/dev/: Dockerfile
frontend/: .eslintrc.json  README.md  package-lock.json  package.json  stylelintrc.json
frontend/src/: App.scss  App.tsx  AppType.tsx  index.tsx  useCharacter.ts  useChat.ts
frontend/src/components/character/: Character.tsx  CharacterItem.tsx  CharacterList.tsx  CharacterMaking.tsx  CharacterType.tsx
frontend/src/components/talk/: Talk.tsx  TalkDialog.tsx  TalkInput.tsx  TalkType.tsx
frontend/src/components/ui/: Footer.tsx  Header.tsx
frontend/src/hooks/: useCharacter.ts  useChat.ts
frontend/src/utils/: constants.tsx
